--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 </head>
 <body>
+    <header class="parallax1">
+        <h1>Bienvenidos a mi sitio web</h1>
+    </header>
+
     <ul>
         <li><a class="activo" href="index.html">Inicio</a></li>
         <li><a href="nosotros.html">Nosotros</a></li>
@@ -18,8 +22,9 @@
         <li><a href="links.html">Links</a></li>
     </ul>
     
-    <div>
+    <div class="main">
         <h1>Practica con DIV</h1>
+        <h2>Galeria</h2>
         <p>Modifica el tamaño de la ventana para ver el efecto responsive.</p>
         <div class="row">
             <div class="column">
@@ -49,6 +54,13 @@
                     <h3>Titulo</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed explicabo aut deserunt quisquam adipisci voluptas fuga pariatur ipsa sapiente atque, neque praesentium esse repudiandae necessitatibus consequuntur ex, veritatis dolorum corporis?</p>
                 </div>
+            </div>
+            <div class="parallax2">
+                <h2>TEXTO TEXTO</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem assumenda ad ut inventore provident labore quas perspiciatis explicabo, quis quo suscipit optio, est, accusantium vel libero totam earum odit.</p>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minima vitae iure molestiae. Quos, placeat facilis numquam incidunt laborum recusandae, illum nam exercitationem velit ipsam obcaecati! Ratione beatae quisquam similique.</p>
             </div>
         </div>
     </div>
