--- a/links.html
+++ b/links.html
@@ -24,28 +24,28 @@
         <div class="row">
             <div class="column">
                 <div class="content">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/q1UidaRqBgw?si=H-W33NdfeAEcvSF_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="width: 100%;"></iframe>
+                    <img src="mountains.jpg" alt="Montañas" style="width: 100%;">
                     <h3>Titulo</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed explicabo aut deserunt quisquam adipisci voluptas fuga pariatur ipsa sapiente atque, neque praesentium esse repudiandae necessitatibus consequuntur ex, veritatis dolorum corporis?</p>
                 </div>
             </div>
             <div class="column">
                 <div class="content">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7Ilu033ydSw?si=Ekmr-7UqqE6tekqX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="width: 100%;"></iframe>
+                    <img src="nature.jpg" alt="Naturaleza" style="width: 100%;">
                     <h3>Titulo</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed explicabo aut deserunt quisquam adipisci voluptas fuga pariatur ipsa sapiente atque, neque praesentium esse repudiandae necessitatibus consequuntur ex, veritatis dolorum corporis?</p>
                 </div>
             </div>
             <div class="column">
                 <div class="content">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/f7dBlAkZyrg?si=AdrckYYPN5Vp16rN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="width: 100%;"></iframe>
+                    <img src="bear.jpg" alt="Oso" style="width: 100%;">
                     <h3>Titulo</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed explicabo aut deserunt quisquam adipisci voluptas fuga pariatur ipsa sapiente atque, neque praesentium esse repudiandae necessitatibus consequuntur ex, veritatis dolorum corporis?</p>
                 </div>
             </div>
             <div class="column">
                 <div class="content">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/fKwfdN6Ja-I?si=jfNsJs4R6D_7hpKU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="width: 100%;"></iframe>
+                    <img src="lights.jpg" alt="Montañas" style="width: 100%;">
                     <h3>Titulo</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed explicabo aut deserunt quisquam adipisci voluptas fuga pariatur ipsa sapiente atque, neque praesentium esse repudiandae necessitatibus consequuntur ex, veritatis dolorum corporis?</p>
                 </div>
